# minibill.github.io

./: .gitignore  config.json  gsgc-2019.fc3c0cef.js  index.html  rss.xml  style.css
2019-07-31-haskelm-1-getting-the-caball-rolling/: index.html
2019-08-01-haskelm-2-don-t-put-that-on-record/: index.html
2019-08-03-haskelm-3-egyptian-ncurses/: index.html
2019-08-04-haskelm-4-prelude-to-the-foundation/: index.html
2019-10-24-advanced-elm-codecs/: index.html
2019-11-23-advanced-elm-modular-arithmetic/: index.html
_layouts/: Elmstatic.elm  Page.elm  Styles.elm
_pages/: contact.md
_posts/: 2019-10-24-advanced-elm-codecs.md  2019-11-23-advanced-elm-modular-arithmetic.md  2099-07-31-haskelm-1-getting-the-caball-rolling.md  2099-08-01-haskelm-2-don-t-put-that-on-record.md  Test.elm
_resources/: CNAME  styles.css
about/: index.html
contact/: index.html
doc/_layouts/: Elmstatic.elm  Page.elm  Styles.elm
doc/_posts/: 2019-07-31-haskelm-1-getting-the-caball-rolling.md  2019-08-01-haskelm-2-don-t-put-that-on-record.md  2019-08-03-haskelm-3-egyptian-ncurses.md  2019-08-04-haskelm-4-prelude-to-the-foundation.md
elm-tea/src/: CLI.hs
elm-tea/src/CLI/: Focus.hs  Layout.hs
gsgc/: index.html
haskelm/: ChangeLog.md  haskelm.cabal
haskelm/app/: Buttons.hs  Form.hs  Main.hs
haskelm/src/: CLI.hs  Color.hs  Curses.hs  Kernel.hs  List.hs  Maybe.hs  Prelude.hs  Protolude.hs  String.hs  Tuple.hs
haskelm/src/CLI/: Attributes.hs  Focus.hs  Layout.hs  Types.hs
haskelm/src/CLI/Types/: Internal.hs
haskelm/src/String/: Internal.hs
posts/: index.html
posts/2019-07-31-haskelm-1-getting-the-caball-rolling/: index.html
posts/2019-08-01-haskelm-2-don-t-put-that-on-record/: index.html
posts/2019-08-03-haskelm-3-egyptian-ncurses/: index.html
posts/2019-08-04-haskelm-4-prelude-to-the-foundation/: index.html
posts/2019-10-24-advanced-elm-codecs/: index.html
tags/advanced_elm/: index.html
tags/design/: index.html
tags/elm/: index.html
tags/haskell/: index.html
tags/math/: index.html
tags/phantom_types/: index.html
