name:                haskelm
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Leonardo Taglialegne
maintainer:          cmt.miniBill@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:    Prelude, CLI, CLI.Attributes, CLI.Layout, CLI.Types, Char, Color, Dict, List, Maybe, Result, String, Tuple
  other-modules:      Protolude, Kernel, Hack, CLI.Types.Internal, String.Internal
  build-depends:      base >=4.11 && <4.12, containers >=0.5 && <0.7, vty >=5.0 && <6.0, text >=1.2 && <1.3
  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions: Strict, StrictData, OverloadedStrings, NoImplicitPrelude
  ghc-options:       
   -- -Wall -Werror -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints

executable haskelm
  main-is:            Form.hs
  build-depends:      haskelm
  hs-source-dirs:     app
  default-language:   Haskell2010
  default-extensions: Strict, StrictData, OverloadedStrings
  ghc-options:        -threaded -Wall -Werror -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
